hook loginin/signin/signup

--- a/assert/css/main.css
+++ b/assert/css/main.css
@@ -660,6 +660,9 @@ text-align: center;
 #syslab_api_landing_choosepj_del{
 	margin-left:100px;
 }
+#syslab_api_landing_cloud_ls_notice{
+	color:#F33;
+}
 
 
 
