--- a/assert/css/main.css
+++ b/assert/css/main.css
@@ -809,9 +809,9 @@ margin-top: 3px;
 	color:#ccc;
 }
 .syslab_api_msgbox_btn_choose_1 {
-width: 300px;
+width: 200px;
 display: inline-block;
-height: 250px;
+height: 150px;
 margin: 20px;
 border: solid 2px rgba(255,255,255,0.1);
 border-radius: 5px;
@@ -822,11 +822,13 @@ color:#ccc;
 	background-color:rgba(255,255,255,0.1);
 }
 .syslab_api_msgbox_btn_choose_1_t {
-font-size: 32px;
+font-size: 21px;
 margin-top: 20px;
+font-weight: bold;
 }
 .syslab_api_msgbox_btn_choose_1_des {
-margin-top: 100px;
+margin-top: 20px;
+font-size: 12px;
 }
 .syslab_api_msgbox_info_1{
 	color:#ccc;
